# databricks-training-trainees

./: .gitignore  README.md
.github/workflows/: day04-deploy.yml  day04-pr-validation.yml
day-01/: README.md
day-01/examples/: 01_python_basics.py  02_sql_foundations.py  03_sql_vs_pyspark.py  04_dataset_exploration.py  New Notebook 2026-06-25 14_03_25.ipynb
day-01/exercises/: 01_python_basics.py  02_sql_foundations.py  03_sql_vs_pyspark.py  04_dataset_exploration.py  05_spark_and_delta_tips.py  06_performance_and_delta_optimization.py  New Notebook 2026-06-25 11_31_42.ipynb
day-01/solutions/: 01_python_basics_solution.py  02_sql_foundations_solution.py  03_sql_vs_pyspark_solution.py  04_dataset_exploration_solution.py  05_spark_and_delta_tips_solution.py  06_performance_and_delta_optimization_solution.py
day-02/data/: README.md  prepare_landing.py
day-02/exercises/activity_1/: first_pipeline.md
day-02/exercises/activity_2/: implement_2_expectations.md
day-02/exercises/activity_3/: use_auto_cdc.md
day-02/pipeline/: bronze.sql  gold.sql  silver.sql
day-02/solutions/activity_1/: brz_reviews.py
day-02/solutions/activity_3/src/orders_parquet_pipeline/transformations/bronze/: brz_orders_parquet.sql
day-02/solutions/activity_3/src/orders_parquet_pipeline/transformations/silver/: slv_orders_parquet.sql  slv_orders_parquet_scd2.sql
day-02/solutions/hands_on/transformations/bronze/: brz_customers.sql  brz_order_items.sql  brz_orders.sql  brz_payments.sql  brz_products.sql  brz_reviews.sql  brz_sellers.sql  brz_translation.sql
day-02/solutions/hands_on/transformations/gold/: gld_delivery_performance.sql  gld_revenue_by_category.sql  gld_review_scores.sql
day-02/solutions/hands_on/transformations/silver/: slv_customers.sql  slv_order_items.sql  slv_orders.sql  slv_products.sql  slv_reviews.sql  slv_sellers.sql
day-03/examples/dbt_olist/: pyproject.toml
day-03/examples/dbt_olist/models/marts/: dim_customers.sql  dim_products.sql  fct_orders.sql
day-03/examples/dbt_olist/models/staging/: stg_customers.sql  stg_order_payments.sql
day-03/examples/dbt_olist/snapshots/: orders_snapshot.sql
day-03/exercises/dbt_olist/: .env.example  .gitignore  .sqlfluffignore  README.md  dbt_project.yml  packages.yml
day-03/exercises/dbt_olist/business_cases/: EXERCISE.md
day-03/exercises/dbt_olist/business_cases/stubs/: gld_customer_cohorts.sql  gld_review_sentiment_by_category.sql  gld_seller_scorecard.sql  stg_order_reviews.sql  stg_sellers.sql
day-03/exercises/dbt_olist/macros/: cast_timestamp.sql  generate_category_label.sql
day-03/exercises/dbt_olist/models/marts/: _mart_models.yml
day-03/exercises/dbt_olist/models/staging/: _sources.yml  stg_order_items.sql  stg_products.sql
day-03/exercises/dbt_olist/seeds/: br_state_regions.csv
day-03/exercises/dbt_olist/tests/generic/: not_in_future.sql
day-03/solutions/dbt_olist/models/marts/: _mart_models.yml  gld_customer_cohorts.sql  gld_review_sentiment_by_category.sql
day-04/: CICD_SETUP.md  CONVERT_DBT_TO_BUNDLE.md
day-04/.github/workflows/: deploy.yml  pr_validation.yml
day-04/dbt-olist-bundle/dbt_olist_bundle/: README.md  databricks.yml  dbt_project.yml  profile_template.yml
day-04/dbt-olist-bundle/dbt_olist_bundle/dbt_profiles/: profiles.yml
day-04/dbt-olist-bundle/dbt_olist_bundle/resources/: dbt_olist_bundle.job.yml
day-04/dbt_olist/: .env.example  .gitignore  README.md  VSCODE_DBT_SETUP.md  profiles.yml
day-04/dbt_olist/models/marts/: gld_delivery_performance.sql
day-04/dbt_olist/models/staging/: _stg_models.yml  stg_orders.sql
day-04/dbt_olist/tests/: assert_no_future_orders.sql
day-04/dbt_olist/tests/generic/: not_in_future.sql
day-04/dbt_olist_bundle/: .env.example  .gitignore  .sqlfluffignore  DATA_MODELLING.md  README.md  databricks.yml  dbt_project.yml  profiles.yml  pyproject.toml
day-04/dbt_olist_bundle/resources/: dbt_olist_bundle.job.yml
day-04/dbt_olist_bundle/src/macros/: generate_schema_name.sql
day-04/dbt_olist_bundle/src/models/marts/: _exposures.yml  dim_customers.sql  gld_revenue_by_category.sql
